--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,6 @@
+FRONTEND_URL=http://localhost:3000
+PORT=3001
+
 DB_HOST=
 DB_PORT=
 DB_USER=
@@ -6,7 +9,11 @@ DB_DATABASE=
 
 GOOGLE_CLIENT_ID= 
 GOOGLE_CLIENT_SECRET= 
-GOOGLE_CALLBACK_URL= 
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/redirect
 
 JWT_SECRET=
-JWT_EXPIRATION=
+JWT_EXPIRATION=60m
+
+EMAIL_SERVICE=Gmail
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-email-password
