--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
+    "nodemailer": "^7.0.2",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
@@ -57,6 +58,7 @@
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
